config/operator-bundle/patches/serviceaccountname_in_deployment.yaml
# This sets the controller-manager deployment to use a non-default
# service account on its pods, since installing the operator with OLM
# puts it into the `operators` namespace alongside other operators.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: azureoperator-controller-manager
  namespace: azureoperator-system
spec:
  template:
    spec:
      serviceAccountName: azure-service-operator
