config/operator-bundle/patches/admissionreviewversions_in_webhook.yaml
# This adds an admissionReviewVersions field to the validation webhook
# items.  It's not exactly valid, since it's a v1beta1
# ValidatingWebhookConfiguration which doesn't have
# webhooks[].admissionReviewVersions, but adding this here tricks the
# operator bundle build command into including it into the
# ClusterServiceVersion.webhookdefinitions.
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: azureoperator-validating-webhook-configuration
webhooks:
  - name: vazuresqlmanageduser.kb.io
    admissionReviewVersions:
      - v1beta1
  - name: vazuresqluser.kb.io
    admissionReviewVersions:
      - v1beta1
